# RnDTestProject

./: .gitignore  LICENSE  README.md  pyproject.toml
output/final/subject_1/: assessment.csv  filtered.bones.csv  filtered.csv  original.csv
output/final/subject_2/: assessment.csv  coord.csv  filtered.bones.csv  filtered.csv  original.csv
output/final/subject_3/: assessment.csv  filtered.bones.csv  filtered.csv  original.csv
output/final/subject_4/: assessment.csv  filtered.bones.csv  filtered.csv  original.csv
output/final/subject_5/: assessment.csv  filtered.bones.csv  filtered.csv  original.csv
report/: algorithm.org  algorithm.tex  report.org  result.org  result.tex
src/: __init__.py  config.py  cycle_detection.py  data_loader.py  fast_animation.py  losses.py  main.py  optimizer.py  preprocessing.py  unified_filter.py  visualization.py
src/assessment/: __init__.py  knee_valgus.py  posture.py
tests/: __init__.py  test_config.py  test_losses.py  test_preprocessing.py
